# proc_gen

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  main.cpp  run.sh
.cache/clangd/index/: main.cpp.6FA649040346723D.idx
src/: clock.h  constants.h  constants.hpp  context.cpp  context.h  context.hpp  engine.cpp  engine.h  engine.hpp  engine_types.h  engine_types.hpp  util.h  util.hpp  vk_context.cpp  vk_context.h  vk_context_impl.cpp  vk_image.cpp  vk_image.h  vk_init.cpp  vk_init.h  vk_pipelines.cpp  vk_pipelines.h  vulkan_impl.cpp
src/shaders/: gradient.comp.slang
